fixing the bugs with the reset

--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
   <div class="form">
     <div class="result" id="result">
         <div id="principle-display">
+          <h4>Principle</h4>
 
         </div>
         <div id="interest">
+          <h4>Interest</h4>
 
         </div>
         <div id="loan">
+          <h4>Loan Amount</h4>
 
         </div>
     
@@ -44,7 +47,7 @@
         </div>
 
         <input type="submit" value="calculate" class="mybtn" id="calc_button">
-         <a href="#" class="clear">clear</a>
+         <a href="#" class="clear" id="clear_button">clear</a>
       </form>
   </div>
 </div>
